client/my-sites/plugins/plugin-action/style.scss
// ==========================================================================
// PluginActions
// ==========================================================================

.plugin-action {
	clear: both;
	line-height: 0;
	margin-top: 16px;

	&:first-child {
		margin-top: 0;
	}

	&.is-warning {
		.plugin-action__label {
			color: var( --color-error );
		}
	}

	.plugin-action__label {
		@include breakpoint-deprecated( '<480px' ) {
			color: var( --color-neutral-70 );
		}
	}

	.components-toggle-control .components-base-control__field {
		margin-bottom: 5px;
	}
}

.plugin-action__label {
	display: flex;
	flex-direction: row-reverse;
	align-items: center;
	font-size: $font-body-extra-small;
	line-height: 16px;
	margin-right: 8px;
	cursor: pointer;

	.is-disabled & {
		color: var( --color-neutral-20 );
		cursor: default;
	}

	.has-disabled-info & {
		cursor: default;
	}
}

.plugin-action__disabled-info.info-popover {
	flex: none;
	margin: -1px 4px;

	.gridicon {
		display: block;
	}

	.gridicons-info-outline > use:first-child,
	.gridicons-info-outline > g:first-child {
		// revert the translate(1px,1px) done by needs-offset
		transform: none;
	}
}

.plugin-action__disabled-info-list {
	margin-left: 16px;
}

